# Route_Zero

./: .env.example  .gitignore  CONTRIBUTING.md  DEMO_SCRIPT.md  Dockerfile.pathway  LICENSE  README.md  SECURITY.md  config.py  docker-compose.pathway.yml  main_pipeline.py  package-lock.json  package.json  pyproject.toml  render.yaml  requirements.txt  simulate_pipeline.py  start.bat  start.sh  vercel.json
app/: globals.css  layout.tsx
app/alerts/: page.tsx
app/analytics/: page.tsx
app/api/eta/: route.ts
app/api/fleet-intel/: route.ts
app/api/query/: route.ts
app/fleet/: page.tsx
app/fleet/[vehicleId]/: page.tsx
app/overview/: page.tsx
app/shipments/: page.tsx
components/: AnomalyLog.tsx  AppShell.tsx  ChatDrawer.tsx  IndiaMap.tsx  RollingChart.tsx  Sidebar.tsx  VehicleEmissionsChart.tsx
connectors/: gemini_telemetry.py  gps_fuel_stream.py  order_stream.py
data/: bookings.jsonl  truck_maintenance_logs.txt
frontend/: package.json
frontend/api/: index.py
frontend/app/: globals.css  page.tsx
frontend/app/alerts/: page.tsx
frontend/app/analytics/: page.tsx
frontend/app/api/booking/: route.ts
frontend/app/api/eta/: route.ts
frontend/app/api/fleet/: route.ts
frontend/app/api/fleet-intel/: route.ts
frontend/app/api/query/: route.ts
frontend/app/api/spike/: route.ts
frontend/app/booking/: page.tsx
frontend/app/carbon-report/: page.tsx
frontend/app/logistics/: page.tsx
frontend/app/overview/: page.tsx
frontend/app/shipments/: page.tsx
frontend/components/: AppShell.tsx  ChatBox.tsx  ChatDrawer.tsx  ClientShell.tsx  FleetAvgChart.tsx  FleetMap.tsx  KpiCard.tsx  MetricModal.tsx  MetricsPanel.tsx
frontend/hooks/: useFleetStream.ts
frontend/lib/: FleetContext.tsx  api.ts
lib/: types.ts
rag/: api_server.py  document_store.py  green_ai.py  llm_assistant.py  pathway_rag_server.py
transforms/: co2_engine.py  eta_engine.py  route_checker.py
(+2 files in other folders)
