[build-system]
requires = ["setuptools>=68.0", "wheel"]
build-backend = "setuptools.build_meta"

[tool.setuptools.packages.find]
include = ["connectors*", "transforms*", "rag*"]

[project]
name = "routezero"
version = "2.0.0"
description = "Real-time carbon intelligence platform for India's logistics sector"
authors = [
    { name = "S-Eshwar-fut-dev", email = "routezero@example.com" }
]
readme = "README.md"
license = { file = "LICENSE" }
requires-python = ">=3.11"
keywords = ["logistics", "carbon", "streaming", "pathway", "india", "co2", "nlp2022"]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3.11",
    "Topic :: Scientific/Engineering :: Artificial Intelligence",
    "Topic :: Internet :: WWW/HTTP :: HTTP Servers",
]
dependencies = [
    "pathway>=0.13.0",
    "fastapi>=0.110.0",
    "uvicorn[standard]>=0.29.0",
    "google-generativeai>=0.5.0",
    "rank-bm25>=0.2.2",
    "python-dotenv>=1.0.0",
    "pydantic>=2.7.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0.0",
    "pytest-cov>=5.0.0",
    "pytest-asyncio>=0.23.0",
    "ruff>=0.4.0",
    "mypy>=1.10.0",
]

[project.urls]
Homepage = "https://github.com/S-Eshwar-fut-dev/routezero"
Repository = "https://github.com/S-Eshwar-fut-dev/routezero"
"Bug Tracker" = "https://github.com/S-Eshwar-fut-dev/routezero/issues"

[tool.ruff]
line-length = 120
target-version = "py311"

[tool.ruff.lint]
select = ["E", "F", "I", "N", "W", "UP"]
ignore = ["E501"]

[tool.mypy]
python_version = "3.11"
strict = false
ignore_missing_imports = true

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = ["test_*.py"]
python_classes = ["Test*"]
python_functions = ["test_*"]
addopts = "-v --tb=short"
